Gnome-shell-3.26: [PopupMenuPanelMenu] Fix incorrect versioning for boxpointer-gap
I've forgotten to change that part, sorry.

--- a/src/shell/sass/gnome-shell/_common.scss
+++ b/src/shell/sass/gnome-shell/_common.scss
@@ -786,7 +786,7 @@ $avatar_width: $icon_size * 1.5;
   }
 
   &.panel-menu {
-    @if $ver < 3.31 {
+    @if $ver < 3.25 {
       -boxpointer-gap: 4px;
       margin-bottom: 16px;
     }
